@@ -1,3 +1,8 @@
+2013-03-05  Patrice Dumas  <pertusus@free.fr>
+
+	* tp/Texinfo/Parser.pm (_close_current): close correctly stacks when
+	closing $format_raw_commands.  Report from Mat Booth.
+
 2013-03-02  Karl Berry  <karl@gnu.org>
 
 	* pretest 5.0.90.
